// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Steps Steps NoSequence demo works fine 1`] = `
<div
  class="t-steps t-steps--horizontal t-steps--dot-anchor"
/>
`;

exports[`Steps Steps VerticalNoSequence demo works fine 1`] = `
<div
  class="setps-demo"
>
  <div
    class="tdesign-demo-block"
  >
    <div
      class="t-steps t-steps--vertical t-steps--dot-anchor t-steps--positive"
    />
     
    <div
      class="t-steps t-steps--vertical t-steps--dot-anchor t-steps--reverse"
    />
  </div>
</div>
`;

exports[`Steps Steps VerticalSequence demo works fine 1`] = `
<div
  class="setps-demo"
>
  <div
    class="tdesign-demo-block"
  >
    <div
      class="t-steps t-steps--vertical t-steps--default-anchor t-steps--positive"
    />
     
    <div
      style="margin: 16px 0px;"
    />
     
    <div
      class="t-steps t-steps--vertical t-steps--default-anchor t-steps--reverse"
    />
  </div>
</div>
`;

exports[`Steps Steps extra demo works fine 1`] = `
<div
  class="t-steps t-steps--vertical t-steps--default-anchor t-steps--positive"
/>
`;

exports[`Steps Steps icon demo works fine 1`] = `
<div
  class="t-steps t-steps--horizontal t-steps--default-anchor"
/>
`;

exports[`Steps Steps options demo works fine 1`] = `
<div
  class="t-steps t-steps--horizontal t-steps--default-anchor"
/>
`;

exports[`Steps Steps sequence demo works fine 1`] = `
<div>
  <div
    class="t-steps t-steps--horizontal t-steps--default-anchor"
  />
   
  <br />
   
  <div
    class="t-steps t-steps--horizontal t-steps--default-anchor"
  />
</div>
`;

exports[`Steps Steps status demo works fine 1`] = `
<div>
  <div
    class="t-steps t-steps--horizontal t-steps--default-anchor"
  />
   
  <div
    style="margin: 16px 0px;"
  />
   
  <div
    class="t-steps t-steps--horizontal t-steps--default-anchor"
  />
</div>
`;
